app/styles/list.css
@media only screen and (min-width: 768px) {
    #sorting-selector {
        position: absolute;
        right: 0;
        margin-right: 20px;
    }

    #sorting-tooltip {
        right: 0;
        top: -17px;
        height : 0;
    }
}

@media only screen and (max-width: 768px) {
    #sorting-tooltip {
        right: 0;
        top: 8px;
        font-size: large;
    }
}

.toolbar-component {
    margin: 5px 0;
}

#list-toolbar {
    margin-top: 20px;
    margin-left: 10px;
}

#infinite-container {
    display: inline-block;
    width: 100%;
}

#sorting-tooltip {
    position: absolute;
    font-weight: bold;
    margin-right: 20px;
}

